--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,38 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="min-h-full">
+      <!-- Navbar -->
+      <nav class="bg-gray-50">
+        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+          <div class="relative flex h-16 items-center justify-between border-b border-gray-200">
+            <div class="flex items-center">
+              <div class="flex-shrink-0">
+                <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=violet&shade=500" alt="Your Company">
+              </div>
+
+              <!-- Links section -->
+              <div class="hidden lg:ml-10 lg:block">
+                <div class="flex space-x-4">
+                  <!-- Current: "bg-gray-100", Default: "hover:text-gray-700" -->
+                  <a href="<%= enquiries_path %>" class="bg-gray-100 rounded-md px-3 py-2 text-sm font-medium text-gray-900" aria-current="page">Enquiries</a>
+
+                </div>
+              </div>
+            </div>
+        </div>
+      </nav>
+      <%= yield(:heading) %>
+
+      <main class="pt-8 pb-16">
+        <div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
+          <div class="px-4 sm:px-0">
+            <%= yield %>
+          </div>
+        </div>
+      </main>
+    </div>
+    <%= turbo_frame_tag :modal %>
+    <%= render partial: 'notifications' %>
   </body>
 </html>
