--- a/app/views/enquiries/_form.html.erb
+++ b/app/views/enquiries/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: enquiry, data: { turbo_frame: "_top" }) do |form| %>
+<%= form_with(model: enquiry, id: "enquiry_form", data: { turbo_frame: "_top" }) do |form| %>
   <% if enquiry.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(enquiry.errors.count, "error") %> prohibited this enquiry from being saved:</h2>
